Lithics3D v0.4.2
==============

New features: None

Other changes:
* alignMesh.PCA: Deprecated in favour of the pcAlign function provided by the Morpho package; It offered no additional functionality. Note
that while both functions will produce identical values for the PCA aligned mesh coordinates, the sign of these values may be different (e.g.
a biface may point left with meshAlign.PCA, and right with pcAlign).
* proj_pt2p: Changed the name of the distance column in output to 'dist' (from -d), explicitly made output a data.frame, updated docs, and added unit tests.
* Updated readme with links to external tools and clearer warning regarding current status.



Lithics3D v0.4.1 (Release date: 2018-09-24)
==============

New features:

* Added function to compute interior angles of polygons (poly_angles)
* Added function to orient 3D data based on two vectors (orient_by_vectors).
* Replaced alignAxis with rotate_v2v, a new function that addresses the limitations of the former and provides
a more generalized, less buggy, and much faster implementation. alignAxis is still available but generates a
warning indicating that it is obsolete.

Other changes:
* Re-added vignette
* Consolidated rotate_v2v, alignAxis, and rotatePt_2D into a single file (geom_rotate)
* Improved documentation (ongoing)
* Added unit tests for several functions (ongoing)


Lithics3D v0.4.0 (Release date: 2018-09-02)
==============

First public release! Note that this package incorporates functions written over several years, and as a result there are unfortunate inconsistencies in the naming conventions as well as in the level of testing and documentation. These are issues that I hope will be fixed by the next release.

Major new features:

* Added functions to automatically measure edge angles along a given path. See `edgeAngles`
* Added functions to generate thickness maps See `mesh_tmap` and `mesh_tmap_plot`